# oxidizr-arch

./: .SRCINFO  .gitignore  BUG_ANALYSIS_ARCH_CONTAINER.md  CHANGELOG.md  Cargo.toml  PKGBUILD  PKGBUILD-git  README.md  TODO.md
.github/workflows/: lint.yml  msrv.yml  publish-dry-run.yml  smoke.yml  test.yml
SPEC/: ARCH_UX.md  COREUTILS_PARITY_POLICY.md  SPEC.md  USER_FLOW.md
docs/: README-oxidizr-arch.md
hack/: aur-utils.sh
packaging/aur/: PKGBUILD
scripts/: arch_dev_proof.sh  arch_dev_shell.sh
scripts/ci/: _common.sh  lint.sh  msrv.sh  publish-dry-run.sh  smoke.sh  test.sh
src/: README.md  error.rs  lib.rs  main.rs
src/adapters/: arch.rs  arch_adapter.rs  mod.rs  preflight.rs
src/assets/: coreutils-bins.txt
src/checks/: compat.rs  mod.rs
src/cli/: args.rs  completions.rs  handler.rs  mod.rs  parser.rs
src/commands/: doctor.rs  mod.rs  replace.rs  replace_parity.rs  replace_post.rs  replace_utils.rs  restore.rs  status.rs  use_cmd.rs  use_install.rs  use_link_planner.rs  use_parity.rs  use_post.rs  use_utils.rs
src/experiments/: checksums.rs  constants.rs  coreutils.rs  findutils.rs  mod.rs  sudors.rs  util.rs
src/logging/: audit.rs  init.rs  mod.rs
src/state/: mod.rs
src/symlink/: mod.rs  ops.rs
src/system/: fs_checks.rs  hook.rs  lock.rs  mod.rs  worker.rs
src/system/worker/: aur.rs  distro.rs  fs_ops.rs  packages.rs
src/tests/: e2e.rs  mod.rs
src/ui/: progress.rs
src/util/: mod.rs  paths.rs  selinux.rs
tests/: bdd_main.rs  steps.rs  world.rs
tests/features/: dry_run_use_coreutils.feature  pacman_locks.feature  replace_coreutils_coverage_missing.feature  replace_coreutils_dry_run.feature  restore_coreutils_keep_dry_run.feature  restore_coreutils_no_keep_dry_run.feature  sanity.feature  status_json.feature  sudo_use_guard_fail.feature  use_coreutils_commit_offline.feature  use_findutils_dry_run.feature
tests/steps/: assert_steps.rs  cli_steps.rs  common_steps.rs  fs_steps.rs  locks_steps.rs  mod.rs
